Trying to fix overlapping description text

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -313,7 +313,7 @@ body {
   text-overflow: ellipsis;
   line-height: 1.28;
   font-size: 16px;
-  max-height: calc(1.28em * 3);
+  max-height: calc(1.28em * 2);
 }
 
 .t-icons {
